12847
The compiler can't compile {{SymbolLoaders.scala}} anymore, unless it's compiled together with {{Global.scala}}.

{code}
build:
Compiling 1 source file to /home/dragos/workspace/scala/build/quick/lib/compiler
/home/dragos/workspace/scala/src/compiler/scala/tools/nsc/symtab/SymbolLoaders.scala:263: error: type mismatch;
 found   : SymbolLoaders.this.global.Symbol
 required: MSILTypeLoader.this.typeParser.global.loaders.clrTypes.global.Symbol
      typeParser.parse(typ, root)
                            ^
one error found
{code}

{code}
$$ touch src/compiler/scala/tools/nsc/Global.scala
$$ ant
...
Compiling 2 source files to /home/dragos/workspace/scala/build/quick/lib/compiler
[timer.quick: 16.792 sec]

BUILD SUCCESSFUL
{code}
